# code-py-samurai

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  README_ja.md  SPRITE_SPEC.md  codecov.yml  eslint.config.js  index.html  package-lock.json  package.json  sonar-project.properties  stylelint.audit.config.mjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codecov.yml  codeql.yml  deploy.yml  sonarcloud.yml
assets/: README.md
assets/scripts/: apply_mapping.py  autofill_mapping.py  batch_extract_and_label.py  reorganize_sprites_by_role.py  review_sprite_packs.py
assets/specs/: role-pack-overrides.tsv  sprite-pack-review.tsv
docs/: ai-graphic-prompting.md  code-element-styling.md  gama-refresh-5x5-request.md  map-layout-schema.md  python-api-reference.md  rubywarrior-to-pythonic.md  web-layout-breakpoints.md
public/: 404.html  sprite-preview.html
scripts/: generate-sprite-asset-manifest.mjs  process_sprite_grid.py
src/: main.ts  main.tsx
tests/: setup-skulpt.ts
tools/: HISTORY.md  PIPELINE.md  css-smell-audit.mjs  phase1_extract.py  phase56_normalize_assemble.py  phase8_frame_audit.py  pyproject.toml  run_phase1.sh
tools/pipeline/: extract_grid_cells.py  extract_orochi.py  extract_saru.py  extract_tanuki.py  extract_tiles.py  extract_tsuru.py  frame_order.py  phase1_extract.py  phase56_normalize_assemble.py  phase7_sd_nextframe.py  phase7_semantic_motion.py  phase8_frame_audit.py  rembg_transparency.py  run_phase1.sh
tools/preview/: tiles-preview.html  tooncrafter-preview.html
(+214 files in other folders)
