[project]
name = "sprite-tools"
version = "0.1.0"
description = "Sprite sheet processing tools for PySamurai"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.4.2",
    "nvidia-cudnn-cu12>=9.19.0.56",
    "onnxruntime-gpu>=1.24.2",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "rembg>=2.0.72",
]
