[project]
name = "sprite-tools"
version = "0.1.0"
description = "Sprite sheet processing tools for PySamurai"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.0",
    "onnxruntime-gpu>=1.24.2",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "rembg>=2.0.72",
    "torch>=2.5",
    "torchvision>=0.20",
    "diffusers>=0.31",
    "transformers>=4.46",
    "accelerate>=1.1",
    "safetensors>=0.4",
    "controlnet-aux>=0.0.9",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
